--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -1,17 +1,12 @@
- * {
-	box-sizing: border-box;	
- }
-
- h1	{
- 	margin-bottom: 15px;
- }
-
-img	{
-	border: 1px solid black;
-	margin: 0px 10px 10px 10px
+* {
+  box-sizing: border-box;
 }
 
 .row {
-	width: 100%;
-	text-align: center;
+  width: 100%;
+  text-align: center;
+}
+
+.hidden {
+  display: none !important;
 }
